--- a/.opensource/project.json
+++ b/.opensource/project.json
@@ -4,5 +4,5 @@
     "content": "README.md",
     "pages" : [],
     "related": ["1amageek/ballcap.ts"],
-    "tabs": ["CloudFirestore", "Firebase"]
+    "tabs": []
   }
