--- a/.opensource/project.json
+++ b/.opensource/project.json
@@ -3,6 +3,6 @@
     "platforms": ["iOS"],
     "content": "README.md",
     "pages" : [],
-    "related": ["1amageek/ballcap.ts"],
+    "related": [],
     "tabs": []
   }
